// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <div
      class="sc-kYrkKh bBwTKa sc-xyEjG bRkbfR"
      color="#fff"
    >
      <div
        class="sc-eHfQar ipzhzx"
      >
        10
        %
      </div>
      <div
        class="sc-biBrSq fFKVZG"
        style="width: 10%;"
      >
        <div
          class="sc-hzMMCg ea-DDW"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <div
      class="sc-kYrkKh bBwTKa sc-xyEjG bRkbfR"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-eHfQar ipzhzx"
      >
        10
        %
      </div>
      <div
        class="sc-biBrSq reSKQ"
        style="width: 10%;"
      >
        <div
          class="sc-hzMMCg ea-DDW"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <div
      class="sc-kYrkKh lxZsb sc-xyEjG bRkbfR"
      color="#fff"
    >
      <div
        class="sc-eHfQar ipzhzx"
      >
        10
        %
      </div>
      <div
        class="sc-biBrSq fFKVZG"
        style="width: 10%;"
      >
        <div
          class="sc-hzMMCg ea-DDW"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
